--- a/PIDev_java/src/UI/UI_candidature/AfficherCandidature.fxml
+++ b/PIDev_java/src/UI/UI_candidature/AfficherCandidature.fxml
@@ -36,5 +36,6 @@
       </Label>
       <TextField fx:id="searchField" layoutX="14.0" layoutY="143.0" prefHeight="25.0" prefWidth="717.0" />
       <Button fx:id="btn_AjouterCandidature" layoutX="863.0" layoutY="143.0" mnemonicParsing="false" onAction="#gotoAjouterCandidature" prefHeight="25.0" prefWidth="111.0" text="Ajouter" />
+      <Button fx:id="front" layoutX="36.0" layoutY="24.0" mnemonicParsing="false" onAction="#gotoFront" prefHeight="25.0" prefWidth="111.0" text="front" />
    </children>
 </AnchorPane>
