--- a/PIDev_java/src/UI/OffreUI/AjouterOffreFXML.fxml
+++ b/PIDev_java/src/UI/OffreUI/AjouterOffreFXML.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="423.0" prefWidth="654.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.AjouterOffreFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="423.0" prefWidth="654.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.AjouterOffreFXMLController">
    <children>
       <Pane prefHeight="78.0" prefWidth="787.0" style="-fx-background-color: #ad0505;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
