--- a/PIDev_java/src/UI/OffreUI/DetailOffre.fxml
+++ b/PIDev_java/src/UI/OffreUI/DetailOffre.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="474.0" prefWidth="824.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.DetailOffreController">
+<AnchorPane id="AnchorPane" prefHeight="474.0" prefWidth="824.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.DetailOffreController">
    <children>
       <VBox layoutX="10.0" layoutY="10.0" prefHeight="456.0" prefWidth="192.0" style="-fx-background-color: #ad0505;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
