--- a/PIDev_java/src/UI/OffreUI/ModifirOffreFXML.fxml
+++ b/PIDev_java/src/UI/OffreUI/ModifirOffreFXML.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="407.0" prefWidth="664.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.ModifirOffreFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="407.0" prefWidth="664.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.ModifirOffreFXMLController">
    <children>
       <Pane prefHeight="62.0" prefWidth="664.0" style="-fx-background-color: #ad0505;">
          <children>
